<resources>
    <string name="app_name">My Notebook</string>
    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_add">Add</string>
    <string name="navigation_about">About</string>
    <string name="stub_add_note_text">Stub Add Note Text</string>
    <string name="stub_edit_note_text">Stub Edit Note Text</string>
    <string name="popup_edit">Edit</string>
    <string name="popup_rename">Rename</string>
    <string name="drawer_open">Open navigation</string>
    <string name="drawer_close">Close navigation</string>
    <string name="about">About</string>
    <string name="icon_android">Android_Icon</string>
    <string name="example">My Notebook</string>
    <string name="delete">Delete</string>
    <string name="clone">Clone</string>
    <string name="login">Login</string>
    <string name="please_signin">Please SignIn</string>
    <string name="delete_note_dialog_button_no">NO</string>
    <string name="confirm_delete_button">YES</string>
    <string name="delete_note_txt">Delete note?</string>
    <string name="delete_note_txt1">This action can not be undone</string>
    <string name="rename_note_title">Rename Note</string>
    <string name="rename_note_done">Done</string>
</resources>