<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        android:iconTint="@color/gray"
        android:orderInCategory="1"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_sort"
        android:icon="@android:drawable/ic_menu_sort_alphabetically"
        android:iconTint="@color/gray"
        android:orderInCategory="10"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_add"
        android:icon="@android:drawable/ic_menu_add"
        android:iconTint="@color/gray"
        android:orderInCategory="20"
        android:title="@string/menu_add"
        app:showAsAction="ifRoom" />

</menu>